--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>goit-react-hw</title>
+    <title>Movies</title>
     <script type="text/javascript">
       (function (l) {
         if (l.search[1] === '/') {
